--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -3,7 +3,18 @@ name: Stage the app
 on: 
   pull_request:
     types: [labeled]
-
+    
+  
+env:
+  DOCKER_IMAGE_NAME: wingucloud-azure-ttt
+  IMAGE_REGISTRY_URL: docker.pkg.github.com
+  #################################################
+  ### USER PROVIDED VALUES ARE REQUIRED BELOW   ###
+  #################################################
+  #################################################
+  ### REPLACE USERNAME WITH GH USERNAME         ###
+  AZURE_WEBAPP_NAME: wingucloud-ttt-app
+  #################################################
 jobs:
   build:
     runs-on: ubuntu-latest
